# cmake-templates

qt6-project/: CMakeLists.txt
